* protocol
  - allow escaping quotes in filter expressions
* decoder
  - ffmpeg: fix build failure with non-standard FFmpeg installation path
  - flac: fix linker failure when building without FLAC support
* encoder
  - vorbis: fix linker failure when building without Vorbis decoder
* fix build failure on Linux-PowerPC
* fix build failure on FreeBSD
* eliminate DLL dependencies on Windows
* require Meson 0.47.2 because a Meson 0.47.1 bug breaks our build

ver 0.21 (2018/10/31)
* configuration
  - add "include" directive, allows including config files
  - incremental "metadata_to_use" setting
* protocol
  - "tagtypes" can be used to hide tags
  - "find" and "search" can sort
  - "outputs" prints the plugin name
  - "outputset" sets runtime attributes
  - close connection when client sends HTTP request
  - new filter syntax for "find"/"search" etc. with negation
* database
  - simple: scan audio formats
  - proxy: require libmpdclient 2.9
  - proxy: forward `sort` and `window` to server
* player
  - hard-code "buffer_before_play" to 1 second, independent of audio format
  - "one-shot" single mode
* input
  - curl: download to buffer instead of throttling transfer
  - qobuz: new plugin to play Qobuz streams
  - tidal: new plugin to play Tidal streams
* tags
  - new tags "OriginalDate", "MUSICBRAINZ_WORKID"
* decoder
  - ffmpeg: require at least version 11.12
  - gme: try loading m3u sidecar files
  - hybrid_dsd: new decoder plugin
  - mad: move "gapless_mp3_playback" setting to "decoder" block
  - mikmod: require at least version 3.2
  - pcm: support audio/L24 (RFC 3190)
  - sidplay: support basic and kernal rom (libsidplayfp)
* resampler
  - soxr: flush resampler at end of song
* output
  - alsa: non-blocking mode
  - alsa: change "dop" and "allowed_formats" settings at runtime
  - ao: fix crash bug due to partial frames
  - shout: support the Shine encoder plugin
  - sndio: remove support for the broken RoarAudio sndio emulation